--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongoose": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
